# mCRL2

./: .gitmodules  CMakeLists.txt
.github/: copilot-instructions.md
.github/instructions/: cpp.instructions.md  python-tests.instructions.md  (+1 more)
bindings/python/: CMakeLists.txt  README.md  mcrl2_bindings.cpp  mcrl2py.cpp  mcrl2py_test.py  setup.py
cmake/: ConfigureCompiler.cmake
libraries/: CMakeLists.txt
libraries/atermpp/: CMakeLists.txt
libraries/atermpp/benchmark/: README  benchmark_parallel.sh  benchmark_sequential.sh  function_application_creation.cpp  function_application_with_converter_creation.cpp  function_symbol_creation.cpp  integer_term_creation.cpp  list_creation.cpp  report.py
libraries/atermpp/include/mcrl2/atermpp/: aterm.cxx  aterm.h  aterm_appl.h  aterm_balanced_tree.h  aterm_container.h  aterm_core.cxx  aterm_int.h  aterm_io.h  aterm_io_binary.h  aterm_io_text.h  aterm_list.cxx  aterm_list.h  aterm_string.h  builder.h  concepts.cxx  concepts.h  function_symbol.cxx  function_symbol.h  function_symbol_generator.cxx  function_symbol_generator.h  module.cxx  type_traits.cxx  unprotected_aterm.h
libraries/atermpp/include/mcrl2/atermpp/detail/: algorithm_impl.h  aterm.h  aterm_appl.h  aterm_appl_iterator.cxx  aterm_appl_iterator.h  aterm_configuration.cxx  aterm_configuration.h  aterm_container.cxx  aterm_container.h  aterm_core_data.cxx  aterm_data.cxx  aterm_hash.cxx  aterm_hash.h  aterm_implementation.h  aterm_int_data.cxx  aterm_list.h  aterm_list_data.cxx  aterm_list_implementation.cxx  aterm_list_implementation.h  aterm_list_iterator.cxx  aterm_list_iterator.h  aterm_pool.cxx  aterm_pool.h  aterm_pool_implementation.cxx  aterm_pool_implementation.h  aterm_pool_storage.cxx  aterm_pool_storage.h  aterm_pool_storage_implementation.cxx  aterm_pool_storage_implementation.h  function_symbol.h  function_symbol_data.cxx  function_symbol_hash.cxx  function_symbol_pool.cxx  function_symbol_pool.h  global_aterm_pool.cxx  global_aterm_pool.h  index_traits.cxx  thread_aterm_pool.cxx  thread_aterm_pool.h  thread_aterm_pool_implementation.cxx  (+3 more)
libraries/atermpp/include/mcrl2/atermpp/standard_containers/: deque.h  indexed_set.h  stack.h  unordered_map.cxx  unordered_map.h  vector.h
libraries/atermpp/include/mcrl2/atermpp/standard_containers/detail/: unordered_map_implementation.cxx  unordered_map_implementation.h
libraries/atermpp/source/: aterm_implementation.cpp  aterm_io_binary.cpp  aterm_io_text.cpp  function_symbol.cpp  function_symbol_pool.cpp
libraries/atermpp/test/: concepts_tests.cpp
libraries/utilities/: CMakeLists.txt
libraries/utilities/include/mcrl2/utilities/: basename.h  big_numbers.h  bitstream.h  block_allocator.cxx  cache_metric.cxx  command_line_interface.h  configuration.cxx  copyable_mutex.h  exception.cxx  execution_timer.cxx  execution_timer.h  file_utility.h  fixed_size_cache.h  hash_utility.cxx  hashtable.cxx  hashtable.h  indexed_set.cxx  indexed_set.h  logger.cxx  logger.h  memory_pool.cxx  memory_pool.h  module.cxx  mutex.cxx  noncopyable.cxx  number_postfix_generator.h  parallel_tool.h  parse_numbers.h  power_of_two.cxx  probabilistic_arbitrary_precision_fraction.h  shared_mutex.cxx  shared_mutex.h  shared_reference.cxx  shared_reference.h  stack_array.cxx  stack_array.h  stopwatch.h  tagged_pointer.cxx  tagged_pointer.h  text_utility.cxx  (+6 more)
libraries/utilities/include/mcrl2/utilities/detail/: atomic_wrapper.cxx  bucket_list.cxx  bucket_list.h  container_utility.h  free_list.cxx  hashtable.h  hashtable_implementation.cxx  indexed_set.h  indexed_set_implementation.cxx  io.h  module.cxx  separate_keyword_section.h  unordered_map_implementation.cxx  unordered_set_implementation.cxx  unordered_set_implementation.h
libraries/utilities/source/: bitstream.cpp  cache_metric.cpp  command_line_interface.cpp  logger.cpp  text_utility.cpp
review/: aterm.md  core.md  data.md  gui.md  lps.md  lts.md  modal_formula.md  pg.md  pres.md  process.md  smt.md  symbolic.md  utilities.md
review_reports/: cmake__headertest.cpp.clean.review.md  cmake__workarounds__msvc__dirent.h.clean.review.md  cmake__workarounds__msvc__sys__time.h.clean.review.md  cmake__workarounds__msvc__unistd.h.clean.review.md  copilot.mcp.json  doc__sphinx__developer_manual__libraries__core__examples__builder1.cpp.clean.review.md  doc__sphinx__developer_manual__libraries__core__examples__traverser1.cpp.clean.review.md  doc__sphinx__developer_manual__libraries__core__examples__traverser2.cpp.clean.review.md  libraries__atermpp__benchmark__benchmark_shared.h.clean.review.md  libraries__atermpp__benchmark__shared_creation.cpp.clean.review.md  libraries__atermpp__benchmark__shared_inspect.cpp.clean.review.md  libraries__atermpp__benchmark__shared_lookup.cpp.clean.review.md  libraries__atermpp__benchmark__unique_creation.cpp.clean.review.md  libraries__atermpp__benchmark__unique_inspect.cpp.clean.review.md  libraries__atermpp__benchmark__unique_lookup.cpp.clean.review.md  libraries__atermpp__example__algorithm.cpp.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__algorithm.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_balanced_tree.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_core.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_int.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_io.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_io_binary.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_io_text.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_list.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__aterm_string.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__builder.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__concepts.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__detail__algorithm_impl.h.clean.review.md  libraries__atermpp__include__mcrl2__atermpp__detail__aterm.h.clean.review.md  (+49 more)
(+227 files in other folders)
